@@ -5,10 +5,7 @@ import io.swagger.v3.oas.annotations.enums.SecuritySchemeType;
 import io.swagger.v3.oas.annotations.security.SecurityScheme;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
-import springfox.documentation.builders.RequestHandlerSelectors;
-import springfox.documentation.service.ApiInfo;
 import springfox.documentation.service.ApiKey;
 import springfox.documentation.service.AuthorizationScope;
 import springfox.documentation.service.SecurityReference;
@@ -22,53 +19,36 @@ import java.util.List;
 @Configuration
 @SecurityScheme(name = "Authorization",
         description = "Login with JWT-token",
-        scheme = "Bearer", type = SecuritySchemeType.HTTP,
-        in = SecuritySchemeIn.HEADER)
+        scheme = "Bearer",
+        type = SecuritySchemeType.HTTP, in = SecuritySchemeIn.HEADER)
 public class SwaggerConfig {
-
-    private static final String CONTROLLER_PACKAGE = "your.controller.package";
-    private static final String API_TITLE = "Your API header";
-    private static final String API_DESCRIPTION = "Description of your API";
-    private static final String API_VERSION = "1.0";
-    private static final String TOKEN_ACCESS_NAME = "Token Access";
-    private static final String TOKEN_ACCESS_KEY = "token";
-    private static final String TOKEN_ACCESS_TYPE = "header";
-    private static final String GLOBAL_SCOPE = "global";
-    private static final String ACCESS_EVERYTHING = "accessEverything";
 
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .select()
-                .apis(RequestHandlerSelectors.basePackage(CONTROLLER_PACKAGE))
                 .paths(PathSelectors.any())
                 .build()
-                .apiInfo(buildApiInfo())
-                .securitySchemes(List.of(buildApiKey()))
-                .securityContexts(Collections.singletonList(buildSecurityContext()));
+                .securitySchemes(List.of(apiKey()))
+                .securityContexts(Collections.singletonList(securityContext()));
     }
 
-    private ApiInfo buildApiInfo() {
-        return new ApiInfoBuilder()
-                .title(API_TITLE)
-                .description(API_DESCRIPTION)
-                .version(API_VERSION)
-                .build();
+    private ApiKey apiKey() {
+        return new ApiKey("Token Access", "token", "header");
     }
 
-    private ApiKey buildApiKey() {
-        return new ApiKey(TOKEN_ACCESS_NAME, TOKEN_ACCESS_KEY, TOKEN_ACCESS_TYPE);
-    }
-
-    private List<SecurityReference> defaultAuth() {
-        AuthorizationScope authorizationScope = new AuthorizationScope(GLOBAL_SCOPE, ACCESS_EVERYTHING);
-        AuthorizationScope[] authorizationScopes = new AuthorizationScope[]{authorizationScope};
-        return List.of(new SecurityReference(TOKEN_ACCESS_NAME, authorizationScopes));
-    }
-
-    private SecurityContext buildSecurityContext() {
+    private SecurityContext securityContext() {
         return SecurityContext.builder()
                 .securityReferences(defaultAuth())
                 .build();
     }
+
+    private List<SecurityReference> defaultAuth() {
+        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
+        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
+        authorizationScopes[0] = authorizationScope;
+        return List.of(new SecurityReference("Token Access", authorizationScopes));
+    }
+
 }
+
